# Flask_project

./: models.py  mynotes.db  pyproject.toml
templates/: index.html
